if( OPENRTM_VERSION STREQUAL OPENRTM_VERSION110 )
  ADD_SUBDIRECTORY(1.1.0)
elseif( OPENRTM_VERSION STREQUAL OPENRTM_VERSION100 )
  ADD_SUBDIRECTORY(1.0.0)
elseif( OPENRTM_VERSION STREQUAL OPENRTM_VERSION101 )
  ADD_SUBDIRECTORY(1.0.1)
elseif( OPENRTM_VERSION STREQUAL OPENRTM_VERSION042 )
  ADD_SUBDIRECTORY(0.4.2)
endif()
